# rsomics-edger-predfc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: counts.tsv  counts_zerolib.tsv  design.tsv  disp.tsv  nf.tsv  predfc_ref.tsv
