[package]
name = "rsomics-edger-predfc"
version = "0.1.2"
description = "edgeR predFC — predictive (prior-count-augmented) log2-fold-change coefficients from an NB-GLM fit, the shrunken logFC edgeR recommends for ranking and plotting"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-edger-predfc"
authors = ["Zane Leong <efd@live.com>"]
keywords = ["bioinformatics", "rna-seq", "edger", "logfc", "glm"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "rsomics-edger-predfc"
path = "src/main.rs"

[lib]
name = "rsomics_edger_predfc"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
